1.12.1
------
Fixed bugs with non-blocking sockets where select statement would go into an
infinite loop due to a bad file descriptor which was not properly removed.

MemoryStore in .NET api uses proper access specifier so compiler does not
complain that it is abstract.

Compiles under gcc 4.1

Fixed UnsatisfiedLinkError when creating FileLogFactory in java.

Fixed various bugs with ResetOnLogon functionality.

Fixed bug where MySQLLog was writing bad strings to table.

Fixed some error messages in MySQL store.

Added support for reconnect in MySQL 5.

1.12.0
------
SocketAcceptor and ThreadedSocketAcceptor can listen for connections on
multiple ports.  SocketAcceptPort no longer needs to be in the DEFAULT
section and can be assigned to sessions.  Sessions can share accepting
ports like before.

SocketAcceptor/Initiator now implemented using non-blocking sockets.  There
is no longer a danger of dead-locking when using these objects.

Support for ODBC log and message store.  QuickFIX can now be used with any 
database with an ODBC driver on windows.  Direct MSSQL implementation is
no longer supported.

Global log exists for logging that does not pertain to an existing session.
Things like incoming connections where the session is not yet identified
go in here.  The message store factory has a new create() method for creating
a global log without a session id.

MessageStore interface now supports refresh which will load in settings
from the persisted store.  RefreshOnLogon configuration setting will
refresh the store whenever the session logs on.  Useful for creating
backup systems.

Added funtionally complete Ruby API.

Python API now supports repeating groups and start() method.

Message::replaceGroup can be used to replace a specific instance of a 
repeating group.

Message::isEmpty can be used to determine if there are any fields in a
message.  Message::clear can clear all fields from a message.
